# appi

./: Cargo.toml
.github/workflows/: release.yml
src/: lib.rs  main.rs
src/api/: aur.rs  github.rs  mod.rs
src/modules/: aur_download.rs  aur_search.rs  delete.rs  github.rs  github_download.rs  github_search.rs  list.rs  mod.rs  search.rs  update.rs
src/utils/: appimage.rs  appimage_tools.rs  completions.rs  errors.rs  get_latest_version.rs  mod.rs  rate_limit.rs  tools.rs
