[package]
name = "appi"
version = "0.1.0"
authors = ["alvaro17f"]
description = "appi - appimage manager"
repository = "https://github.com/alvaro17f/appi"
license = "LGPL-3.0"
edition = "2021"
keywords = ["appi", "appimage", "rust", "manager", "tui", "github"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
clap_complete = "4.4.1"
color-print = "0.3.5"
config = "0.13.1"
dialog = "0.3.0"
dialoguer = "0.11.0"
indicatif = "0.17.6"
reqwest = { version = "0.11", features = ["json"] }
semver = "1.0.20"
serde = "1.0.188"
serde_json = "1.0.107"
sudo = "0.6.0"
system_shutdown = "4.0.1"
tokio = { version = "1.15", features = ["full"] }
