[package]
name = "appi"
version = "0.7.2"
authors = ["alvaro17f"]
description = "appi - appimage manager"
repository = "https://github.com/alvaro17f/appi"
license = "LGPL-3.0"
edition = "2021"
keywords = ["appi", "appimage", "manager", "tui", "github"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
clap = { version = "4.4.6", features = ["derive"] }
clap_complete = "4.4.1"
color-print = "0.3.5"
dialoguer = "0.11.0"
indicatif = "0.17.6"
openssl = { version = "0.10.40", features = ["vendored"] }
regex = "1.10.2"
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.17.1"
semver = "1.0.20"
serde = { version = "1.0.188", features = ["derive"] }
sudo = "0.6.0"
tokio = { version = "1.15", features = ["full"] }
